* template: support m:text and m:{attr} for message body and attribute